[project]
name = "langchain-streamlit-chatgpt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "marumarukun", email = "cheriera.0310@gmail.com" }
]
dependencies = [
    "streamlit>=1.35.0",
    "langchain>=0.2.5",
    "tenacity==8.3.0",
    "langchain-community>=0.2.5",
    "openai>=1.34.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "langchain_streamlit_chatgpt:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_streamlit_chatgpt"]
